Fixed hover state logo/brand scaling flicker

--- a/dependencies/theme/css/objects.scss
+++ b/dependencies/theme/css/objects.scss
@@ -9,9 +9,6 @@
 	-moz-transition: background 2s;
 	transition: background 2s;
 }
-.reveal .brand:hover{
-	background: url(../branding/hydeslides-hover.png) no-repeat center;
-}
 
 /*Chapter Identifier Headers for Sub-Sections*/
 .reveal .chapter-banner{
